@@ -1,5 +1,5 @@
 <html>
-<!-- $Id: documentation.html,v 1.36 2005-04-12 11:10:50 ian_dickinson Exp $ -->
+<!-- $Id: documentation.html,v 1.37 2005-04-12 15:03:15 jeremy_carroll Exp $ -->
 <!-- (c) Copyright 2003, 2004, 2005 Hewlett-Packard Development Company LP -->
 <head>
   <title>Jena Semantic Web Framework - Documentation Overview</title>
@@ -108,7 +108,9 @@ Jena Documentation
 vocabulary or ontology</a></p>
 <p><a href="how-to/dig-reasoner.html">Using a DIG reasoner with Jena</a></p>
 <p><a href="migrate1-2.html">Migration from Jena1 to Jena2</a></p>
-<p><a href="how-to/owl-syntax-checker.html">OWL Syntax Checker</a></p>
+<p><a href="how-to/owl-syntax-checker.html">OWL Syntax Checker</a>
+(now a separately downloadable
+<a href="contrib/contributions.html">contrib</a>)</p>
 
 <p><a href="how-to/event-handler.html">Model Event Mechanism</a></p>
 <p><a href="how-to/reification.html">Reification</a></p>
