@@ -1,5 +1,5 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
-<!-- $Id: tools.content.html,v 1.4 2005-02-11 12:27:53 andy_seaborne Exp $ -->
+<!-- $Id: tools.content.html,v 1.5 2005-04-12 15:03:15 jeremy_carroll Exp $ -->
 <!-- (c) Copyright 2003, 2004, 2005 Hewlett-Packard Development Company L.P.  All rights reserved -->
 <head>
   <title>Jena Semantic Web Framework - Command Line Utilities</title>
@@ -66,8 +66,7 @@ from a vocabulary or ontology</a></dd>
 <dt>dbremove</dt>
 <dd>Remove a Jena model and all its data from a database. Use with care.</dd>
 
-<dt>owlsyntax</dt>
-<dd>Implements the OWL Syntax Checker from the OWL Test Cases.</dd>
+
 
 </dl>
 
