@@ -1,5 +1,5 @@
 <html>
-<!-- $Id: tools.html,v 1.19 2005-04-07 05:23:08 chris-dollin Exp $ -->
+<!-- $Id: tools.html,v 1.20 2005-04-12 15:03:15 jeremy_carroll Exp $ -->
 <!-- (c) Copyright 2003, 2004, 2005 Hewlett-Packard Development Company LP -->
 <head>
   <title>Jena Semantic Web Framework - Command Line Utilities</title>
@@ -101,8 +101,7 @@ from a vocabulary or ontology</a></dd>
 <dt>dbremove</dt>
 <dd>Remove a Jena model and all its data from a database. Use with care.</dd>
 
-<dt>owlsyntax</dt>
-<dd>Implements the OWL Syntax Checker from the OWL Test Cases.</dd>
+
 
 </dl>
 
